# plantsofthebush

./: .gitignore  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
static/: input.js  plants.css  species.js
templates/: input.html  plants.html  species.html
