[tool.poetry]
name = "repl_nix_plantsofthebush"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-HTTPAuth = "^4.7.0"
Werkzeug = "^2.2.2"
supabase = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
